[project]
name = "ifls807-audience-reception-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.15.0",
    "matplotlib>=3.11.0",
    "numpy>=1.24.0",
    "openrouter>=0.1.0",
    "playwright>=1.60.0",
    "praw>=8.0.0",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.38",
    "tqdm>=4.68.2",
]
